hphp/hack/test/typecheck/reactive/rx_class3.php.exp
File "rx_class3.php", line 3, characters 3-10:
Reactive annotations are not allowed on classes, interfaces or traits. (Parsing[1002])
